--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,5 @@
   "buildCommand": "bundle exec jekyll build",
   "outputDirectory": "_site",
   "framework": "jekyll",
-  "installCommand": "bundle install",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "_site"
-      }
-    }
-  ]
+  "installCommand": "gem install bundler && bundle install"
 }
