--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "bundle exec jekyll build",
+  "buildCommand": "gem install bundler && bundle install && bundle exec jekyll build",
   "outputDirectory": "_site",
-  "framework": "jekyll",
-  "installCommand": "gem install bundler && bundle install"
+  "framework": "jekyll"
 }
