Fix Vercel deployment configuration
- Update vercel.json to use @vercel/static-build for Jekyll
- Modify package.json build script to install bundler and gems before Jekyll build
- This fixes the 'bundler: command not found: jekyll' error in Vercel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ vendor/
 # Node modules (if using any Node.js tools)
 node_modules/
 
-# Bundle lock file (keep this for consistent builds)
-# Gemfile.lock
+# Bundle lock file (can be regenerated)
+Gemfile.lock
