--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "_site"
-      }
-    }
-  ]
+  "framework": "jekyll",
+  "installCommand": "gem install bundler && bundle install",
+  "buildCommand": "bundle exec jekyll build",
+  "outputDirectory": "_site"
 }
