Fix Ruby/Bundler compatibility issues for Vercel deployment
- Remove old Gemfile.lock with incompatible Bundler 1.17.2
- Update Gemfile to specify modern Ruby (>= 3.0) and Bundler (>= 2.0) versions
- Simplify vercel.json configuration to let Vercel handle Ruby environment setup

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "framework": "jekyll",
-  "installCommand": "gem install bundler && bundle install",
+  "installCommand": "bundle install",
   "buildCommand": "bundle exec jekyll build",
   "outputDirectory": "_site"
 }
