--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Faraday's Digital Garden - A Jekyll-based personal website",
   "scripts": {
-    "build": "gem install bundler && bundle install && bundle exec jekyll build",
+    "build": "bundle exec jekyll build",
     "serve": "bundle exec jekyll serve",
     "clean": "bundle exec jekyll clean"
   },
