Fix Vercel deployment: Add production URL and environment settings
- Added production URL to _config.yml for correct canonical links
- Set JEKYLL_ENV=production in vercel.json build command
- Fixes blank page issue on Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "installCommand": "bundle install",
-  "buildCommand": "bundle exec jekyll build",
+  "buildCommand": "JEKYLL_ENV=production bundle exec jekyll build",
   "outputDirectory": "_site"
 }
