--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ include: ["_pages"]
 exclude: ["_includes/notes_graph.json"]
 # You may need to change the base URL depending on your deploy configuration.
 baseurl: ""
+url: "https://faraday-s-garden-b7a49fkcg-anishdhiman662k2-9478s-projects.vercel.app"
 
 # Encoding configuration for UTF-8 support
 encoding: utf-8
